--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #5c4a4a;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -13,8 +13,8 @@ body {
 }
 
 .start-screen, .game-screen, .word-list {
-  display: none;
-  background-color: #fff;
+  display: flex;
+  background-color: #574444;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
